nucleo-picker-vt/tests/scenarios/snapshots/scenarios__multiline__multiline_highlight_viewport@distant-wide-highlight-only.snap
---
source: nucleo-picker-vt/tests/scenarios/multiline.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: distant-wide-highlight-only
  name_expression: "\"distant-wide-highlight-only\""
  sequence: 3
---
version: 1
size:
  cols: 15
  rows: 9
screen: alternate
cursor:
  position:
    x: 4
    y: 0
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "> 語           "
  - "  1/1 ─────────"
  - "▌ …d           "
  - "▌ …jk界-tail   "
  - ▌ ……界界界語-t…
  - "▌ …            "
  - "▌ …jkl界-tail  "
  - "▌ …acer        "
  - ▌ ……界界界終-t…
styles:
  - row: 1
    start: 0
    end: 5
    foreground: "#b9ca4a"
    italic: true
  - row: 1
    start: 5
    end: 15
    foreground: "#c5c8c6"
    italic: true
  - row: 2
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 2
    start: 1
    end: 4
    background: "#666666"
    bold: true
  - row: 3
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 3
    start: 1
    end: 12
    background: "#666666"
    bold: true
  - row: 4
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 4
    start: 1
    end: 10
    background: "#666666"
    bold: true
  - row: 4
    start: 10
    end: 12
    foreground: "#70c0b1"
    background: "#666666"
    bold: true
  - row: 4
    start: 12
    end: 15
    background: "#666666"
    bold: true
  - row: 5
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 5
    start: 1
    end: 3
    background: "#666666"
    bold: true
  - row: 6
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 6
    start: 1
    end: 13
    background: "#666666"
    bold: true
  - row: 7
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 7
    start: 1
    end: 7
    background: "#666666"
    bold: true
  - row: 8
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 8
    start: 1
    end: 15
    background: "#666666"
    bold: true
