nucleo-picker-vt/tests/scenarios/snapshots/scenarios__multiline__multiline_reversed@default-height-60x1.snap
---
source: nucleo-picker-vt/tests/scenarios/multiline.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: default-height-60x1
  name_expression: "format!(\"default-height-60x{rows}\")"
  sequence: 5
---
version: 1
size:
  cols: 60
  rows: 1
screen: alternate
cursor:
  position:
    x: 2
    y: 0
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - ">                                                           "
